--- a/LibraryApp/LibraryApp/LibraryApp.csproj
+++ b/LibraryApp/LibraryApp/LibraryApp.csproj
@@ -7,4 +7,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <WarningLevel>0</WarningLevel>
+  </PropertyGroup>
 </Project>
