--- a/LibraryApp/Service/Service.csproj
+++ b/LibraryApp/Service/Service.csproj
@@ -15,9 +15,11 @@
   <ItemGroup>
     <None Remove="Services\" />
     <None Remove="Services\Interfaces\" />
+    <None Remove="Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
     <Folder Include="Services\Interfaces\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
 </Project>
